<resources>
    <string name="app_name">Explicit_Intents_Videos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_implicit_intents">Activity Implicit intents</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Strings Usados en los archivos xml -->
    <string name="implicit_intents">Implicit Intents</string>
    <string name="hello_first_fragment_implicit">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Introduce_tu_nombre">Introduce tu nombre</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
    <string name="ignore_this_content">Ignore this content</string>
    <string name="welcome_to_activity_3">Welcome to activity 3</string>
    <string name="ingresa_tu_nikname">Ingresa tu NikName</string>
    <string name="tvResults_of_Activity_3">El resultado de la informacion de activity 3 será mostrado en este recuador</string>
    <string name="to_activity_2">\ to the Activity 2 \</string>
    <string name="call">Call</string>
    <string name="call_friend">Call Friend</string>
    <string name="open_web">Open Web</string>
    <string name="open_map">Open Map</string>
    <!-- Strings Usados en los archivos Java -->
    <string name="no_datos">No hemos obtenido datos de activity 3</string>
    <string name="rellena_los_campos">Por favor 0Rellena todos los campos</string>
    <!-- Strings Usados de forma general -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="result">Result</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="welcome">\ Welcome \</string>
</resources>